add junit test for blocked queue